2A/05_Projet_GL/src/test/deca/context/valid/complet/08_decl_field_tout_type.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024
class A {

}

class B {
    A a ; 
    int i ; 
    float f ; 
    boolean b ; 
}