2A/05_Projet_GL/src/test/deca/context/invalid/complet/25_filed_A_init_int.deca
// Description :
//    Assign invalide dans decl field : int  --> class A 
// Resultats :
//    ligne 13 : le int ne peut pas être affecté à A
// Historique :
//  cree le 16/01/2024

class A {

}

class B {
    A a = 1; 
}